<resources>
  <string name="app_name">Say the Same!</string>

  <string name="label_google_sign_in">Firebase + Google Sign In</string>
  <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

  <string name="label_facebook_login">Firebase + Facebook Login</string>
  <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

  <string name="label_twitter_login">Firebase + Twitter Login</string>
  <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

  <string name="label_emailpassword">Email/Password Authentication</string>
  <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

  <string name="label_passwordless">Passwordless Authentication</string>
  <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

  <string name="label_phone_auth">Phone Number Authentication</string>
  <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

  <string name="label_anonymous_auth">Anonymous Authentication</string>
  <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

  <string name="label_custom_auth">Custom Authentication</string>
  <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

  <string name="label_firebase_ui">FirebaseUI Auth</string>
  <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

  <string name="hint_user_id">User ID</string>
  <string name="get_custom_token">Get Token</string>
  <string name="sign_in">Sign In</string>
  <string name="create_account">Create Account</string>
  <string name="send_link">Send Link</string>
  <string name="sign_out">Sign Out</string>
  <string name="verify_email">Verify Email</string>
  <string name="disconnect">Disconnect</string>
  <string name="loading">Loading…</string>
  <string name="custom_token">Custom Token</string>
  <string name="signed_in">Signed In</string>
  <string name="signed_out">Signed Out</string>
  <string name="token_null">Token: null</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="desc_firebase_lockup">Firebase logo and name</string>
  <string name="auth_failed">Authentication failed</string>
  <string name="start_phone_auth">Start</string>
  <string name="verify_phone_auth">Verify</string>
  <string name="resend_phone_auth">Resend</string>
  <string name="hint_phone_number">Phone Number</string>
  <string name="hint_verification_code">Verification Code</string>
  <string name="status_code_sent">Code Sent</string>
  <string name="status_verification_failed">Verification failed</string>
  <string name="status_verification_succeeded">Verification succeeded</string>
  <string name="status_sign_in_failed">Sign-in failed</string>
  <string name="instant_validation">(instant validation)</string>

  <string name="firebase_status_fmt">Firebase User: %s</string>
  <string name="firebase_user_management">Firebase User Management</string>

  <string name="google_status_fmt">Google User: %s</string>
  <string name="google_title_text">Google Sign In</string>

  <string name="facebook_status_fmt">Facebook User: %s</string>
  <string name="facebook_title_text">Facebook Login</string>

  <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
  <string name="emailpassword_title_text">Email and Password</string>

  <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
  <string name="passwordless_title_text">Passwordless Sign In</string>
  <string name="status_email_not_sent">Send link to your email to get started.</string>
  <string name="status_email_sent">Link sent, check your email to continue.</string>
  <string name="status_link_found">Link received, enter email to sign in.</string>

  <string name="phone_title_text">Phone Number</string>

  <string name="twitter_status_fmt">Twitter User: %s</string>
  <string name="twitter_title_text">Twitter Login</string>

  <string name="firebaseui_status_fmt">Firebase User: %s</string>
  <string name="firebaseui_title_text">FirebaseUI Auth</string>

  <string name="id_fmt">User ID: %s</string>
  <string name="email_fmt">Email: %s</string>
  <string name="title_enter_screen">Say the same</string>
  <string name="slogan_enter_screen">When minds are crossing</string>
  <string name="first_time_enter_screen">First time?</string>
  <string name="sign_up_button_label">sign up</string>
  <string name="let_me_in_enter_screen">Let me in!</string>
  <string name="sign_in_enter_screen">sign in</string>
  <string name="sign_in_google_button_label">Sign-in with google</string>
  <string name="sign_in_fb_button_label">Sign-in with facebook</string>
  <string name="sign_in_vk_button_label">sign-in with vk.com</string>
  <string name="facebook_app_id">2136100249951686</string>
  <string name="fb_login_protocol_scheme">fb2136100249951686</string>
  <string name="hint_text_sign_up_email">e-mail</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="menu_player_avatar_desc">Avatar of the player</string>
  <!-- Errors oof LoginActivity -->
  <string name="empty_email">Please enter an e-mail</string>
  <string name="empty_password">Please enter a password</string>
  <string name="empty_nickname">Please enter a nickname</string>
  <string name="logo">Say the same</string>
  <string name="slogan">The unpredictable text game</string>
  <string name="sign_up_enter_screen">sign up</string>
</resources>
