<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/sign_in_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <android.support.design.widget.TextInputLayout
      android:id="@+id/emailInputLtSignin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_email"
      android:visibility="visible"
      app:errorEnabled="true"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/emailInputEdTxtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/pswdInputLtSignIn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:visibility="visible"
      app:errorEnabled="true"
      >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/pswdInputEdTxtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/btnSignInProcess"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="visible"
      android:text="@string/sign_in_enter_screen"
      />
  <TextView
      android:id="@+id/let_me"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/first_time_enter_screen"
      />
  <Button
      android:id="@+id/button_sign_up"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sign_up_button_label"
      />
</LinearLayout>