<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <ProgressBar
      android:id="@+id/pBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:visibility="gone"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_enter_screen"
        />
    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan_enter_screen"
        />
    <TextView
        android:id="@+id/first_time_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_time_enter_screen"
        />
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:visibility="gone"
        >

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pswdInputL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:visibility="gone"
        >

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          />
    </android.support.design.widget.TextInputLayout>


  </LinearLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <Button
        android:id="@+id/sign_in_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_google_button_label"
        />
    <Button
        android:id="@+id/sign_in_fb_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/sign_in_google_button"
        android:text="Login with facebook"
        android:textColor="#ffff"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/sign_in_vk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_google_button"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_vk_button_label"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLtSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pswdInputLtSignIn"
        android:hint="@string/hint_email"
        android:visibility="gone"
        >

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pswdInputLtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_sign_in"
        android:hint="@string/hint_password"
        android:visibility="gone"
        >

      <android.support.design.widget.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/let_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_sign_in"
        android:text="@string/let_me_in_enter_screen"
        />
    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in_enter_screen"
        />
  </RelativeLayout>
</LinearLayout>